--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ video {
   margin-right: 15px;
 }
 
-.fa-play:hover,
+.fa-play-circle:hover,
 .fa-pause:hover {
   color: var(--primary-color);
   cursor: pointer;
